cka/scripts/scheduler/11_scheduler_ingress_one_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-one-host
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: www.k8slocal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: svc-ingress-nginx-web
            port:
              number: 80
