cka/scripts/scheduler/12_scheduler_ingress_mulhost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mulhost
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.k8slocal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: svc-ingress-nginx-web
            port:
              number: 80
  - host: tomcat.k8slocal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-ingress-tomcat-web
            port:
              number: 8080
